# mtlog

./: .gitignore  CMakeLists.txt  CMakePresets.json  INSTALL.txt  README.md
cmake/: MTLogConfig.cmake.in
mtlog/: CMakeLists.txt
mtlog/include/mtlog/: format_pairs.hpp  mt_log.h  mt_log.hpp
mtlog/src/: mt_log.cpp
tests/: CMakeLists.txt  main.cpp  testMTLog.cpp
